2012-10-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginscheduler.c (hash_add): Closed memleak. Thanks to Felix
	Wolfsteller for spotting.

2012-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Updated for upcoming release.

2012-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CHANGES: Prepared for soon release of first 3.4 beta.

2012-10-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginscheduler.c (plugins_scheduler_init): Removed the
	cleverness feature to enable ACT_SETTINGS that were explicitely
	disabled. This behaviour is too clever for its own good.
	This means that clients can not rely on this behaviour anymore
	and must select the NVTs with corresponding care from now on.

2012-10-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/openvassd.c (main): Add command line switch to exit once the NVT
	cache has been initialized or updated.

2012-09-10  Thomas reinke <reinke@securityspace.com>

	* src/comm.c (send_plug_info): Fixed SIGSEGV coredump that would
	occur if no family specified in a nasl script (would core dump
	if client connected and requested complete nasl test list)

2012-09-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp_11.c (ntp_1x_send_dependencies): Use str2arglist
	directly instead of plug_get_deps.

	* src/pluginscheduler.c (hash_add, plugins_scheduler_init):
	Use str2arglist directly instead of plug_get_*.

2012-07-19  Michael Meyer <michael.meyer@greenbone.net>

	* src/openvassd.c:
	store.h was deleted in r13728. So don't include it.

2012-07-19  Matthew Mundell <matthew.mundell@greenbone.net>

	Add new OTP version 1.1 which is like 1.0 but sends less info to the
	client initially.  Patch by Jan-Oliver Wagner.

	* src/comm.c (comm_init): Add OTP/1.1 case.

	* src/openvassd.c (scanner_thread): Skip sending some of the init info for
	OTP > 1.0.

2012-07-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
