@@ -1,5 +1,9 @@
 2012-10-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* src/pluginscheduler.c (hash_link_destroy): Closed memleak.
+
+2012-10-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* src/pluginscheduler.c (hash_add): Closed memleak. Thanks to Felix
 	Wolfsteller for spotting.
 
